prereqs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
    route: multiapp.example.com
  name: httpbin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
        route: multiapp.example.com
    spec:
      containers:
      - image: cfrouting/httpbin
        name: httpbin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpbin
  sessionAffinity: None
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy
    route: multiapp.example.com
  name: proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
        route: multiapp.example.com
    spec:
      containers:
      - image: cfrouting/proxy
        name: proxy
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
  name: proxy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: proxy
  sessionAffinity: None
  type: ClusterIP
