ingress-via-context-paths.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 80
      - path: /anything
        backend:
          serviceName: httpbin
          servicePort: 80
