mtls.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: with-client-auth
spec:
  virtualhost:
    fqdn: tls.example.com
    tls:
      secretName: httpbin-cert
      clientValidation:
        caSecret: client-root-ca
  routes:
    - services:
        - name: httpbin
          port: 80
