multiple-apps-to-route.yml
apiVersion: v1
kind: Service
metadata:
  name: multiapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    route: multiapp.example.com
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin
spec:
  rules:
  - host: multiapp.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: multiapp
          servicePort: 80
