multiple-routes-to-app.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy1
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy2
spec:
  rules:
  - host: bar.foo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy
          servicePort: 80
