tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  tls:
  - hosts:
    - "tls.example.com"
    secretName: httpbin-cert
  rules:
  - host: tls.example.com
    http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 80
